<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeatRacing</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_session">Save</string>
    <string name="action_add_lineup">New Set</string>
    <string name="title_activity_boatset_create">Create Set</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_one_rower">1</string>
    <string name="button_two_rowers">2</string>
    <string name="button_three_rowers">3</string>
    <string name="button_four_rowers">4</string>
    <string name="num_rowers_label">Select number of pairs to race:</string>
    <string name="switch_last_pair_label">Switch last pair</string>
    <string name="title_activity_front_page">Seat Racing</string>
    <string name="button_new_race">New Race</string>
    <string name="button_load_race">Load</string>
    <string name="button_race_history">History</string>
    <string name="boat_name_hint">Karina, etc</string>
    <string name="boat_name_default">Boat</string>
    <string name="rower_label_default">Rower</string>
    <string name="rower_name_default">Bob J. Rower</string>
    <string name="button_results_save">Save</string>
    <string name="button_results_email">Email</string>
    <string name="results_text">This is where results go</string>
    <string name="desmond_results">Evan W. 2.6 Andy V (3 wins, 1 tie)\n
        Adam R. 1.4 James A. (2 wins, 2 losses)\n
        Alex S. 2.3 Nate C. (1 win, 3 ties)\n
        Max M. 2.4 Dillon K. (2 wins, 2 ties)</string>
    <string name="extended_results">		Race 1\n
		BoatA 3:25.6\n
		BoatB 3:26.5\n\n
		Race 2\n
		BoatA 3:34.7\n
		BoatB 3:34.4\n\n
		Race 3\n
		BoatA 3:29.9\n
		BoatB 3:32.1\n\n
		Race 4\n
		BoatA 3:33.7\n
		BoatB 3:39.6\n\n
		Race 5\n
		BoatA 3:24.6\n
		BoatB 3:22.5\n\n
		Race 6\n
		BoatA 3:29.5\n
		BoatB 3:34.8\n\n
		Race 7\n
		BoatA 3:39.6\n
		BoatB 3:29.7\n\n
		Race 8\n
		BoatA 3:31.5\n
		BoatB 3:32.4\n\n	</string>
    <string name="title_activity_lineups_timer">Race</string>
    <string name="title_activity_results">Results</string>
    <string name="timer_start_button">Start</string>
    <string name="timer_split_button">Split</string>
    <string name="timer_done_button">Done</string>
    <string name="add_new_set_button">New Racing Set</string>

    <string-array name="mock_lineup_1">
        <item>Alex</item>
        <item>Bob</item>
        <item>Charles</item>
        <item>Danny</item>
    </string-array>
    <string-array name="mock_lineup_2">
        <item>Adam</item>
        <item>Ben</item>
        <item>Chris</item>
        <item>Dillon</item>
    </string-array>

    <string name="timer_default">00:00:00</string>
    <string name="finish_boatlist_default">________</string>
    <string name="race_num_default">Race #1</string>
    <string name="timer_finish_button">Results</string>
    <string name="result_race_default">Race</string>
    <string name="result_boat_default">Boat</string>
    <string name="result_time_default">00:00:00</string>
    <string name="state_label_default">Setting Lineups</string>
    <string name="state_label_init">Initialize</string>
    <string name="state_label_lineup">Adding Lineups</string>
    <string name="state_label_racing">Race #</string>
    <string name="state_label_switching">Performing Switch</string>
    <string name="state_label_result">Finished Race #</string>
    <string name="state_label_done">Done with Round</string>
    <string name="state_label_ordering">Selecting Finish Order</string>
    <string name="edit_times_label">Edit finish time:</string>
    <string name="win_column_header">Won</string>
    <string name="lost_column_header">Lost</string>
    <string name="time_diff_column_header">difference</string>
    <string name="spread_default_text">(A 0w0t, B 0w0t)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_historic_results">Results History</string>

</resources>
