<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/race_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/result_race_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/boat_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/result_boat_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/result_time_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>