<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/button_new_race"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:background="@drawable/selectable_item_background"
        android:text="@string/button_new_race" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/dividerHorizontal" />

    <Button
        android:id="@+id/button_load_race"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_background"
        android:text="@string/button_load_race" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/dividerHorizontal" />

    <Button
        android:id="@+id/button_race_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selectable_item_background"
        android:text="@string/button_race_history" />

</LinearLayout>